welcome.lessons.welcome.array.island.Island.scala.error
island:9: error: overloaded method value max with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int)
				T(i)=Math.max(T(i-1)+T(i+1))			
                                          ^